--- a/views/admin/booking/table_booking.ejs
+++ b/views/admin/booking/table_booking.ejs
@@ -10,12 +10,35 @@
         <thead>
           <tr>
             <th>No</th>
+            <th>Date</th>
+            <th>Title</th>
             <th>Name Bank</th>
-            <th>Nomor Rekening</th>
-            <th>Nema</th>
+            <th>Status</th>
             <th>Action</th>
           </tr>
         </thead>
+        <tbody>
+          <% for(let i = 0; i < booking.length; i++) { %>
+          <tr>
+            <td><%= i +1 %></td>
+            <td>
+              <%= booking[i].bookingStartDate.toLocaleString().split(",")[0] %>
+              s/d <%= booking[i].bookingEndDate.toLocaleString().split(",")[0]
+              %>
+            </td>
+            <td><%= booking[i].itemId.title %></td>
+            <td><%= booking[i].payments.bankFrom %></td>
+            <td><%= booking[i].payments.status %></td>
+            <td>
+              <a
+                href="/admin/booking/<%= booking[i].id %>"
+                class="btn btn-success btn-circle btn-sm button-update"
+                ><i class="fas fa-eye"></i
+              ></a>
+            </td>
+          </tr>
+          <% } %>
+        </tbody>
       </table>
     </div>
   </div>
