--- a/views/admin/item/detail_item/show_activity.ejs
+++ b/views/admin/item/detail_item/show_activity.ejs
@@ -62,7 +62,7 @@
                   <td><%= activity[i].type %></td>
                   <td>
                     <img
-                      src="http://localhost:8000/<%= activity[i].imageUrl %>"
+                      src="https://admin-staycation.heroku.app/<%= activity[i].imageUrl %>"
                       alt="imageUrl"
                       width="70px"
                     />
