--- a/views/admin/item/detail_item/show_feature.ejs
+++ b/views/admin/item/detail_item/show_feature.ejs
@@ -68,7 +68,7 @@
                   <td><%= feature[i].qty %></td>
                   <td>
                     <img
-                      src="http://localhost:8000/<%= feature[i].imageUrl %>"
+                      src="https://admin-staycation.heroku.app/<%= feature[i].imageUrl %>"
                       alt="imageUrl"
                     />
                   </td>
