--- a/views/admin/bank/table_bank.ejs
+++ b/views/admin/bank/table_bank.ejs
@@ -35,7 +35,7 @@
             <td><%= bank[i].name %></td>
             <td>
               <img
-                src="http://localhost:8000/<%= bank[i].imageUrl %>"
+                src="https://admin-staycation.heroku.app/<%= bank[i].imageUrl %>"
                 alt="<%= bank[i].nameBank %>"
                 width="70"
               />
