--- a/views/admin/booking/table_detail_booking.ejs
+++ b/views/admin/booking/table_detail_booking.ejs
@@ -6,7 +6,7 @@
       <div class="col-md-4">
         <h1 class="h3 mb-4 text-gray-800">Payment Proof</h1>
         <img
-          src="http://localhost:8000/<%= booking.payments.proofPayment %>"
+          src="https://admin-staycation.heroku.app/<%= booking.payments.proofPayment %>"
           alt="imageUrl"
           style="width: 100%; display: block"
         />
